# sdk-nrf

./: CODEOWNERS  west.yml
applications/audio/broadcast_config_tool/: CMakeLists.txt  prj.conf
applications/audio/broadcast_config_tool/src/: main.c
applications/connectivity_bridge/src/: main.c
applications/nrf5340_audio/: Kconfig  Kconfig.defaults  prj.conf
applications/nrf5340_audio/broadcast_source/: main.c
applications/nrf5340_audio/child_image/: hci_rpmsg.conf
applications/nrf5340_audio/include/: nrf5340_audio_common.h
applications/nrf5340_audio/nrf5340_audio_app/: testcase.yaml
applications/nrf5340_audio/src/: main.c
applications/nrf5340_audio/src/audio/: Kconfig  audio_datapath.c  audio_datapath.h  audio_system.c  audio_system.h  le_audio_rx.c  (+5 more)
boards/shields/nrf5340_audio_display/: nrf5340_audio_display.overlay
include/: contin_array.h
lib/: CMakeLists.txt  Kconfig
lib/contin_array/: Kconfig
samples/bluetooth/broadcast_config_tool/: prj.conf  shell_commands.py
subsys/bluetooth/: enocean.c
subsys/bluetooth/controller/: crypto.c  ecdh.c  hci_driver.c
subsys/bluetooth/mesh/: gen_plvl_srv.c  gen_ponoff_srv.c  gen_prop_srv.c  light_ctl_srv.c  light_ctrl_srv.c  light_hsl_srv.c  light_hue_srv.c  light_sat_srv.c  light_temp_srv.c  light_xyl_srv.c  lightness_srv.c  model_utils.c  rpl.c  scene_srv.c  scheduler_srv.c  sensor.c  sensor_cli.c  sensor_srv.c
subsys/net/openthread/: Kconfig.defconfig
tests/bluetooth/iso/: prj.conf
tests/nrf5340_audio/tmp_cap/: CMakeLists.txt  prj.conf  testcase.yaml
tests/nrf5340_audio/tmp_cap/src/: main.c
(+91 files in other folders)
